# FastX-Tui-Plugin-Example

./: .gitignore  LICENSE  PLUGIN_CONFIG_GUIDE.md  README.md  config_schema.json  example_business.py  fastx_plugin.py  fastx_tui_plugin.py  manual.md  pyproject.toml
.github/workflows/: bump-version.yml
Demo/: scroll_demo.py  textual_demo.py
demos/rich/: code_execution_monitor.py  components_view.py  layout_nav.py  log_execution_monitor.py  minimal_monitor_1.py  minimal_monitor_2.py  monitor_dashboard.py  panel_table.py  parallel_progress.py
resources/: example.txt
