[build-system]
requires = [ "setuptools>=61.0.0", "wheel>=0.37.0",]
build-backend = "setuptools.build_meta"

[project]
name = "fastx-tui-plugin-example"
version = "0.1.4"
description = "FastX-Tui插件示例，展示插件系统的基本功能和最佳实践"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [ "build>=1.3.0", "requests>=2.31.0", "rich>=13.0.0",]
keywords = [ "fastx-tui", "plugin", "example",]
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent", "Topic :: Software Development :: Libraries :: Python Modules",]
[[project.authors]]
name = "FastX Team"

[project.urls]
Homepage = "https://github.com/fastxteam/FastX-Tui-Plugin-Example"
Repository = "https://github.com/fastxteam/FastX-Tui-Plugin-Example.git"
Issues = "https://github.com/fastxteam/FastX-Tui-Plugin-Example/issues"

[tool.setuptools]
py-modules = [ "example_business", "fastx_tui_plugin",]
